Bug 455884 - nsIDOMDataTransfer's dropEffect not updated after drag operation completes; r=enndeakin sr=roc